[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Upgrade.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.29236
margin_bottom = 1.29236
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 113.0
margin_top = 66.0
margin_right = 1153.0
margin_bottom = 626.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 8
text = "Upgrades"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 1040.0
margin_bottom = 525.0
size_flags_vertical = 3
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 1040.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 395.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Aumentar Combustível"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 399.0
margin_right = 799.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuantityUpgrade1" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 803.0
margin_right = 886.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "0/6   "

[node name="QuantityUpgrade1Button" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 890.0
margin_right = 1040.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/QuantityUpgrade1Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 1040.0
margin_bottom = 130.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 190.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Aceleração"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 194.0
margin_right = 799.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuantityUpgrade2" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 803.0
margin_right = 886.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "0/6   "

[node name="QuantityUpgrade2Button" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 890.0
margin_right = 1040.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2/QuantityUpgrade2Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 1040.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 334.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Velocidade Máxima"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 338.0
margin_right = 799.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuantityUpgrade3" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 803.0
margin_right = 886.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "0/6   "

[node name="QuantityUpgrade3Button" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 890.0
margin_right = 1040.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer3/QuantityUpgrade3Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 529.0
margin_right = 1040.0
margin_bottom = 560.0

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 176.0
margin_bottom = 31.0
rect_min_size = Vector2( 176, 31 )
flat = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/Back"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Back to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 180.0
margin_right = 980.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Play" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 984.0
margin_right = 1040.0
margin_bottom = 31.0
rect_min_size = Vector2( 56, 31 )
flat = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/Play"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Play"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="."]
margin_left = 113.0
margin_top = 85.0
margin_right = 1153.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
text = "$ 100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/QuantityUpgrade1Button" to="." method="_on_QuantityUpgrade1Button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/QuantityUpgrade2Button" to="." method="_on_QuantityUpgrade2Button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer3/QuantityUpgrade3Button" to="." method="_on_QuantityUpgrade3Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Play" to="." method="_on_Play_pressed"]
